--- a/YandexMystem.Wrapper/YandexMystem.Wrapper.csproj
+++ b/YandexMystem.Wrapper/YandexMystem.Wrapper.csproj
@@ -22,14 +22,19 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
+    <DebugType>none</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <GenerateSerializationAssemblies>Off</GenerateSerializationAssemblies>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -40,8 +45,21 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Enums\GramPartsEnum.cs" />
     <Compile Include="Enums\MystemExecuteOptions.cs" />
     <Compile Include="Extensions\StringExtension.cs" />
+    <Compile Include="Models\GramAnimModel.cs" />
+    <Compile Include="Models\GramCaseModel.cs" />
+    <Compile Include="Models\GramGenderModel.cs" />
+    <Compile Include="Models\GrammCountModel.cs" />
+    <Compile Include="Models\GramVerbSpeciesModel.cs" />
+    <Compile Include="Models\GramVerbTenseModel.cs" />
+    <Compile Include="Models\GramVerbPersModel.cs" />
+    <Compile Include="Models\LexModel.cs" />
+    <Compile Include="Models\Mystem\MystemLex.cs" />
+    <Compile Include="Models\Mystem\MystemResult.cs" />
+    <Compile Include="Models\Mystem\MystemWord.cs" />
+    <Compile Include="Models\WordModel.cs" />
     <Compile Include="Mysteam.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tools\MystemOptionsTool.cs" />
@@ -52,7 +70,7 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Models\" />
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
